--- a/it.unibo.radarSystem22/RadarSystemConfig.json
+++ b/it.unibo.radarSystem22/RadarSystemConfig.json
@@ -8,5 +8,6 @@
 "raspAddr"         : "192.168.178.20",
 "serverPort"       : "8023",
 "ledPort"          : "8010",
-"sonarPort"        : "8015"
+"sonarPort"        : "8015",
+"protocolType"     : "ProtocolType.tcp"
 }
